Correcciones en la conexion api

--- a/appsettings.Production.json
+++ b/appsettings.Production.json
@@ -7,7 +7,7 @@
 		}
 	},
 	"UriBaseAddress": {
-		"WebApiBaseUrl": "https://localhost:{port}/api/"
+		"WebApiBaseUrl": "https://storeapirest.azurewebsites.net/api/"
 	},
 	"AllowedHosts": "*",
 	"ConnectionStrings": {
@@ -16,8 +16,8 @@
 		"Prod": "Data Source=Prod\\SQLEXPRESS;Initial Catalog=MyDB;Integrated Security=SSPI;"
 	},
 	"StoreAppSettings": {
-		"WebApiBaseUrl": "https://localhost:{port}/api/",
-		"User": "{User}",
-		"Password": "{Password}"
+		"WebApiBaseUrl": "https://storeapirest.azurewebsites.net/api/",
+		"User": "User",
+		"Password": "Password"
 	}
 }
