--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -1,31 +1,32 @@
 {
-	"iisSettings": {
-		"windowsAuthentication": false,
-		"anonymousAuthentication": true,
-		"iis": {
-			"applicationUrl": "http://localhost/ASP.NET_CORE_WEB_SITE",
-			"sslPort": 0
-		},
-		"iisExpress": {
-			"applicationUrl": "http://localhost:60519/account",
-			"sslPort": 44342
-		}
-	},
-	"profiles": {
-		"IIS Express": {
-			"commandName": "IISExpress",
-			"launchBrowser": true,
-			"environmentVariables": {
-				"ASPNETCORE_ENVIRONMENT": "Development"
-			}
-		},
-		"ASP.NET_CORE_WEB_SITE": {
-			"commandName": "Project",
-			"launchBrowser": true,
-			"environmentVariables": {
-				"ASPNETCORE_ENVIRONMENT": "Production"
-			},
-			"applicationUrl": "http://localhost:60519/account/"
-		}
-	}
+  "iisSettings": {
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
+    "iis": {
+      "applicationUrl": "http://localhost/ASP.NET_CORE_WEB_SITE",
+      "sslPort": 0
+    },
+    "iisExpress": {
+      "applicationUrl": "http://localhost:60519/",
+      "sslPort": 44343
+    }
+  },
+  "profiles": {
+    "IIS Express": {
+      "commandName": "IISExpress",
+      "launchBrowser": true,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Production"
+      },
+      "nativeDebugging": true
+    },
+    "ASP.NET_CORE_WEB_SITE": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Production"
+      },
+      "applicationUrl": "https://adminstore.azurewebsites.net/"
+    }
+  }
 }
